# example-gRPC

./: .gitignore  .mise.toml  README.md  calculator.proto  client.py  server.py
cpp/: CMakeLists.txt  calculator.proto  client.cpp  server.cpp
go/: go.mod
go/calculatorpb/: calculator.proto
go/client_go/: main.go
go/server_go/: main.go
java/: pom.xml
java/calculator-client/: pom.xml
java/calculator-client/src/main/java/com/example/calculator/: CalculatorClient.java
java/calculator-proto/: pom.xml
java/calculator-proto/src/main/proto/: calculator.proto
java/calculator-server/: pom.xml
java/calculator-server/src/main/java/com/example/calculator/: CalculatorServer.java  CalculatorServiceImpl.java
java/src/main/java/io/grpc/examples/calculator/: CalculatorServer.java
node/: package-lock.json  package.json
node/client/: index.ts
node/server/: index.ts
python/: client.py  server.py
